# partnero-sdk

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: deploy.yml
partnero/: __init__.py  authentication.py  base_api.py  coupon_api.py  customer_api.py  partner_api.py  promotion_code_api.py  transaction_api.py  utils.py  webhook_api.py
tests/: test_partnero.py
