[tool.poetry]
name = "partnero"
version = "0.1.0"
description = "A Python SDK designed to wrap around the Partnero API."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
